# be-tengri-news

./: Dockerfile  README.md  main.py  pyproject.toml  scraped_data.json
app/: scraper.py  utils.py  v1.py
