[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["dinmukhammed <arystambekdimash005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
bs4 = "^0.0.2"
requests = "^2.31.0"
celery = "^5.3.6"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
schedule = "^1.2.1"
aiohttp = "^3.9.3"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
